--- a/notebooks/05_Airflow_ML_Pipelines.ipynb
+++ b/notebooks/05_Airflow_ML_Pipelines.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make sure you unpause the DAG before you start the run!!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
