--- a/notebooks/10_Distributed_TensorFlow_Training_Job.ipynb
+++ b/notebooks/10_Distributed_TensorFlow_Training_Job.ipynb
@@ -2,88 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tfjob.kubeflow.org/tfjobbldc7 created\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl create -f training-jobs/distributed-tensorflow-training-job.yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NAME         STATE   AGE\r\n",
-      "tfjobbldc7           1s\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!kubectl get tfjob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: Syntax error: end of file unexpected\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!kubectl describe tfjob <copy-paste-name-of-tfjob>"
+    "!kubectl describe tfjob distributed-training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: Syntax error: end of file unexpected\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!kubectl get pod | grep <copy-paste-name-of-tfjob>"
+    "!kubectl get pod | grep distributed-training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: Syntax error: end of file unexpected\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!kubectl logs -f <copy-paste-name-of-pod>"
+    "!kubectl logs -f distributed-training-worker-0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check the TensorFlow Jobs Tab"
    ]
   },
   {
