--- a/notebooks/12_Hyper_Parameter_Tuning.ipynb
+++ b/notebooks/12_Hyper_Parameter_Tuning.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error from server (AlreadyExists): error when creating \"hyperparameter-tuning/random-search-job.yaml\": studyjobs.kubeflow.org \"random-search-job\" already exists\r\n"
+      "studyjob.kubeflow.org/random-search-job created\r\n"
      ]
     }
    ],
@@ -18,20 +18,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error from server (AlreadyExists): error when creating \"hyperparameter-tuning/random-search-tfjob.yaml\": object is being deleted: studyjobs.kubeflow.org \"random-search-tfjob\" already exists\r\n"
-     ]
-    }
-   ],
    "source": [
-    "!kubectl create -f hyperparameter-tuning/random-search-tfjob.yaml"
+    "# Check out the Parameter Optimizations tab"
    ]
   },
   {
