more cleanup, added privacy + redis + tf2.0

--- a/notebooks/03a_TensorFlow_Transform_Advanced.ipynb
+++ b/notebooks/03a_TensorFlow_Transform_Advanced.ipynb
@@ -57,20 +57,6 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "tFcdSuXTidhH"
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "from __future__ import print_function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "K4QXVIM7iglN"
    },
    "outputs": [],
@@ -78,6 +64,8 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import print_function\n",
+    "import sys\n",
     "\n",
     "import argparse\n",
     "import os\n",
