--- a/notebooks/04_TensorFlow_Model_Analysis.ipynb
+++ b/notebooks/04_TensorFlow_Model_Analysis.ipynb
@@ -38,19 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install tensorflow_model_analysis==0.13.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%bash\n",
-    "jupyter nbextension enable --py widgetsnbextension\n",
-    "jupyter nbextension install --py --symlink tensorflow_model_analysis\n",
-    "jupyter nbextension enable --py tensorflow_model_analysis"
+    "pip install tensorflow_model_analysis==0.13.2\n",
+    "\n",
+    "jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
+    "jupyter nbextension install --py --symlink --sys-prefix tensorflow_model_analysis\n",
+    "jupyter nbextension enable --py --sys-prefix tensorflow_model_analysis"
    ]
   },
   {
