--- a/notebooks/09_Advanced_KubeFlow_ML_Pipeline.ipynb
+++ b/notebooks/09_Advanced_KubeFlow_ML_Pipeline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Upload the following to KubeFlow Pipelines\n",
+    "\n",
+    "https://github.com/PipelineAI/kubeflow-tfx-workshop/raw/master/kubeflow-pipelines/taxi/taxi-cab-classification-pipeline.tar.gz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
