--- a/notebooks/05_Airflow_ML_Pipelines.ipynb
+++ b/notebooks/05_Airflow_ML_Pipelines.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Airflow Pipeline"
+    "# Run Airflow `taxi` Pipeline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make sure you unpause the DAG before you start the run!!!"
+    "# Note:  Make sure you unpause the DAG before you start the run!!!"
    ]
   },
   {
