--- a/notebooks/06_Airflow_Feature_Analysis.ipynb
+++ b/notebooks/06_Airflow_Feature_Analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# YOU MUST RUN Airflow `taxi` Pipeline BEFORE YOU CONTINUE !!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Feature Analysis\n",
     "\n",
     "Use the code below to run TensorFlow Transform on some example data using the schema from your pipeline. Start by importing and opening the metadata store."
@@ -253,6 +260,13 @@
     "            preprocessing_fn))\n",
     "    display(pd.DataFrame(transformed_examples))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
