--- a/notebooks/07_Airflow_Model_Analysis.ipynb
+++ b/notebooks/07_Airflow_Model_Analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# YOU MUST RUN Airflow `taxi` Pipeline BEFORE YOU CONTINUE !!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Analyze Model Performance\n",
     "\n",
     "Use the code below to run TensorFlow Model Analysis on the model in your pipeline. Start by importing and opening the metadata store."
