--- a/notebooks/08_Simple_KubeFlow_ML_Pipeline_TODO.ipynb
+++ b/notebooks/08_Simple_KubeFlow_ML_Pipeline_TODO.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "divmod_op = comp.func_to_container_op(my_divmod, base_image='tensorflow/tensorflow:1.13.1-cpu-py3')"
+    "divmod_op = comp.func_to_container_op(my_divmod, base_image='tensorflow/tensorflow:1.13.1-py3')"
    ]
   },
   {
@@ -229,8 +229,12 @@
    "source": [
     "pipeline_func = calc_pipeline\n",
     "pipeline_filename = pipeline_func.__name__ + '.pipeline.tar.gz'\n",
+    "\n",
     "import kfp.compiler as compiler\n",
-    "compiler.Compiler().compile(pipeline_func, pipeline_filename)"
+    "compiler.Compiler().compile(pipeline_func, pipeline_filename)\n",
+    "\n",
+    "!ls $pipeline_filename\n",
+    "!tar -xzvf $pipeline_filename"
    ]
   },
   {
@@ -256,10 +260,15 @@
     "\n",
     "#Submit a pipeline run\n",
     "run_name = pipeline_func.__name__ + ' run'\n",
-    "run_result = client.run_pipeline(experiment.id, run_name, pipeline_filename, arguments)\n",
-    "\n",
-    "#vvvvvvvvv This link leads to the run information page. (Note: There is a bug in JupyterLab that modifies the URL and makes the link stop working)"
+    "run_result = client.run_pipeline(experiment.id, run_name, pipeline_filename, arguments)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
