--- a/notebooks/04_TensorFlow_Model_Analysis.ipynb
+++ b/notebooks/04_TensorFlow_Model_Analysis.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MAKE SURE YOU CLICK THE `Trusted` BOX IN THE UPPER-RIGHT!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "YuSYVbwEYNHw"
